# autoinfer

./: .gitignore  AUTOINFER_GOAL.md  AUTORESEARCH_GOAL.md  README.md  index.html  pyproject.toml
autoinfer/: __init__.py  cli.py  evaluator.py  executor.py  executor.py.bak  loop.py  optimizer.py  params.py  profiler.py  reporter.py  results.py
benchmarks/: run_baseline.py  wikitext_sample.txt
configs/: cpu_only_32gb.json  m1_pro_16gb.json  m2_max_32gb.json  rtx3070_8gb.json  rtx3080_10gb.json  rtx3090_24gb.json  rtx4070ti_12gb.json
scripts/: AUTORESEARCH_REPORT.md  autoresearch_analysis.py  autoresearch_results.json  bayesian_phase12.py  bayesian_predictions.json  measure_perplexity.py
tests/: test_cli.py  test_evaluator.py  test_executor.py  test_loop.py  test_optimizer.py  test_params.py  test_profiler.py  test_results.py
